...
    </dependencies>
    <scenes>
        <!--TAKE-->
        <scene sceneID="lu9-Qg-PkL">
            <objects>
                <navigationController id="4bw-fl-gDE" userLabel="TAKE" colorLabel="IBBuiltInLabel-Red" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="DELIVERY" image="car.fill" catalog="system" id="wsV-MF-6hf"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="J6f-xT-52S">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="fMR-ci-MP0" kind="relationship" relationship="rootViewController" id="X7V-3S-awV"/>
...
                                <rect key="frame" x="0.0" y="88.5" width="90" height="90"/>
                                <color key="tintColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="91.5" id="wQR-3m-ByK"/>
                                </constraints>
                            </imageView>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="house.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="XfN-7c-8Gf">
                                <rect key="frame" x="324" y="87.5" width="90" height="90"/>
                                <color key="tintColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="70" translatesAutoresizingMaskIntoConstraints="NO" id="8QP-1
                                <rect key="frame" x="98" y="88" width="70" height="90"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
            <point key="canvasLocation" x="25" y="-16"/>
        </scene>
        <!--ASK FOR-->
        <scene sceneID="mCg-oV-3dQ">
            <objects>
                <navigationController id="BLS-Vw-BWj" userLabel="ASK FOR" colorLabel="IBBuiltInLabel-Yellow" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="REQUEST" image="house.fill" catalog="system" id="hAl-VI-7Yx"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="q9E-wK-cuN">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="uQl-uK-ZN9" kind="relationship" relationship="rootViewController" id="Mxn-iR-Qco"/>
...
            <point key="canvasLocation" x="3147.826086956522" y="750.66964285714278"/>
        </scene>
        <!--GIVE-->
        <scene sceneID="yjm-z4-MIp">
            <objects>
                <navigationController id="zr9-Ua-sOS" userLabel="GIVE" colorLabel="IBBuiltInLabel-Purple" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="DONATION" image="cart.fill" catalog="system" id="2MP-49-Psi"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SaR-5c-DLb">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="AfO-Iz-Nix" kind="relationship" relationship="rootViewController" id="qoG-Xh-Kfn"/>
...
                            <constraint firstItem="Tfm-pu-2VE" firstAttribute="leading" secondItem="Mr0-UL-qGd" secondAttribute="trailing" constant="8" symbolic="YES" id="tnn-X3-THc"/>
                            <constraint firstItem="as3-Zp-Fnz" firstAttribute="bottom" secondItem="ya7-WP-bsM" secondAttribute="bottom" constant="10" id="vXb-Yk-5BD"/>
                            <constraint firstItem="Tfm-pu-2VE" firstAttribute="centerY" secondItem="Mr0-UL-qGd" secondAttribute="centerY" id="wO2-bf-tdk"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="as3-Zp-Fnz"/>
                    </view>
                    <navigationItem key="navigationItem" title="DONATE" id="g9A-uf-O9L"/>
                    <connections>
                        <outlet property="chevron" destination="Tfm-pu-2VE" id="kCK-sP-Khi"/>
                        <outlet property="icon" destination="Mr0-UL-qGd" id="AnK-cv-lXH"/>
                        <outlet property="qtyButton" destination="MBm-OE-XNd" id="UZc-Jz-mNX"/>
                        <outlet property="table" destination="ya7-WP-bsM" id="X0f-nt-3Z9"/>
                        <segue destination="w5z-eR-hLV" kind="show" identifier="DonationVC" id="lsu-jU-xKB"/>
...
                                <rect key="frame" x="280.5" y="208" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="jk6-80-t0Z"/>
                                    <constraint firstAttribute="width" constant="60" id="tWJ-pG-dlx"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" image="plus.circle.fill" catalog="system">
                                    <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="41" scale="large"/>
                                </state>
                                <connections>
                                    <action selector="plusButton:" destination="w5z-eR-hLV" eventType="touchUpInside" id="jKh-vI-NxT"/>
                                </connections>
...
